--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "papaparse": "^5.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
+    "sonner": "^2.0.5",
+    "sweetalert2": "^11.22.0",
+    "sweetalert2-react-content": "^5.1.0",
+    "uuid": "^11.1.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
