--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/supabase-js": "^2.50.0",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
+    "date-fns": "^2.30.0",
     "file-saver": "^2.0.5",
     "firebase": "^11.9.1",
     "googleapis": "^150.0.1",
+    "html2canvas": "^1.4.1",
     "html5-qrcode": "^2.3.8",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
@@ -31,6 +32,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-medium-image-zoom": "^5.2.14",
+    "react-select": "^5.10.1",
     "sonner": "^2.0.5",
     "sweetalert2": "^11.22.0",
     "sweetalert2-react-content": "^5.1.0",
