--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hot-toast": "^2.5.2",
     "react-medium-image-zoom": "^5.2.14",
     "react-select": "^5.10.1",
+    "recharts": "^2.12.0",
     "sonner": "^2.0.5",
     "sweetalert2": "^11.22.0",
     "sweetalert2-react-content": "^5.1.0",
@@ -47,6 +48,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/recharts": "^1.8.29",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
